--- a/q/qw/qwe/qwertee.com.html
+++ b/q/qw/qwe/qwertee.com.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the qwertee.com privacy policy that was archived on 2016-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161226053500id_/https%3A//www.qwertee.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the qwertee.com privacy policy that was archived on 2017-08-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170829224803id_/https%3A//www.qwertee.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
 <meta charset="UTF-8">
-<title>Privacy Policy |Qwertee : Limited Edition Cheap Daily T Shirts | Gone in 24 Hours | T-shirt Only £8/€10/$12 | Cool Graphic Funny Tee Shirts</title>
-<meta name="Description" content="Qwertee.com sells a new cool, funny, graphic t shirt every 24 hours for only £8/€10/$12! Get your limited edition tee now before its too late!">
+<title>Privacy Policy |Qwertee : Limited Edition Cheap Daily T Shirts | Gone in 24 Hours | T-shirt Only £9/€11/$12 | Cool Graphic Funny Tee Shirts</title>
+<meta name="Description" content="Qwertee.com sells a new cool, funny, graphic t shirt every 24 hours for only £9/€11/$12! Get your limited edition tee now before its too late!">
 <meta property="fb:admins" content="1050828616">
 <meta name="keywords" content="Qwerty T Shirts, Qwerty, Qwertee, Graphic Tees, cool shirts, awesome t shirts, cheap graphic tees, tee shirts, limited edition tshirts, limited edition tee shirts, cool graphic tees, cool graphic t-shirts, mens, boys girls Tshirts kids Tees, womens, ladies, funny, cool, music, printed, graphic, designer, humor, unique, t-shirts, tee shirts, tshirts, clothing, design, art, Irish T-Shirts, Irish T-Shirt, retro, band, art, cotton t shirt, Irish Shirts, tshirts ireland, Limited Edition, Ireland, online t shirts, tees, funny shirts, funny slogans, t-shirts UK, daily t shirt, 24 hours only, UK, Europe, Worldwide, Free Delivery, Free Returns">
 <link rel="icon" href="//cdn.qwertee.com/favicon.ico">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,800" rel="stylesheet" type="text/css">
-<link href="//cdn.qwertee.com/css/git-086b22f/main.css" rel="stylesheet" type="text/css">
+<link href="//cdn.qwertee.com/css/git-976111b8/main.css" rel="stylesheet" type="text/css">
 <meta name="blitz" content="mu-b206d666-41efa54e-0c0a7432-b3a88a29">
 <script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -18,8 +18,8 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('require', 'ecommerce');
   ga('create', 'UA-25877856-1', 'auto');
+  ga('require', 'ecommerce');
   ga('send', 'pageview');
 
 </script>
@@ -42,7 +42,7 @@ src="https://www.facebook.com/tr?id=200056860360101&ev=PageView&noscript=1"
 <body class="generic-text white-footer  ">
 <noscript>Javascript is required to use this site</noscript>
 <div id="fb-root"></div>
-<div id="top-banner" data-time="1482538412" style="color:#ffffff;background-color:#000000"><div></div></div>
+<div id="top-banner" data-time="" style="color:#;background-color:#"><div></div></div>
 <div id="header-wrap">
     <div id="top-nav">
 	    <div id="delivery-from">
@@ -66,6 +66,7 @@ src="https://www.facebook.com/tr?id=200056860360101&ev=PageView&noscript=1"
         <div id="main-nav">
           <a href="/">Today's Tees</a>
           <a href="/shop">Tee Shop</a>
+              <a href="/collections/tank-tops">Collections</a>
           <a href="/prints">Prints</a>
           <a href="/tees/vote/selected" data-submenu="vote">Vote</a>
           <a href="/tees/free-tees">Win</a>
@@ -112,6 +113,7 @@ src="https://www.facebook.com/tr?id=200056860360101&ev=PageView&noscript=1"
         <ul>
 			<li><a href="/">Today's Tees</a></li>
 			<li><a href="/shop">Tee Shop</a></li>
+                              <a href="/collections/tank-tops">Collections</a>
 			<li><a href="/prints">Print Shop</a></li>
 			<li><a href="/tees/vote/selected">Vote</a></li>
 			<li><a href="/tees/free-tees">Win</a></li>
@@ -243,7 +245,7 @@ Ireland<br>
                 <p>Get a €1/£1/$1 discount code, sneak peeks of upcoming tees/sales, a chance at a free tee every week and more!</p>
                 <form class="manage-subscriptions" action="/newsletter" method="post">
                     <input type="hidden" value="1" name="newsletter">
-                    <input type="hidden" name="_csrf" value="DzfINDTw-UAZVFvsTtxzcmn-ZqNcOb23WpGQ">
+                    <input type="hidden" name="_csrf" value="4rV1mAvp--q2UaowUr84hQwL7gXI-VzkGARo">
                     <input type="email" name="email" placeholder="Enter your email">
                     <input type="submit" value="JOIN!" class="submit raleway"><br>
                     <input type="checkbox" value="1" checked="checked" name="daily" id="footer-daily">
@@ -271,7 +273,6 @@ Ireland<br>
                     <li><a href="/">Today's Tee</a></li>
                     <li><a href="/">Last Chance Tee</a></li>
                     <li><a href="/shop">Shop Tees</a></li>
-                    <li><a href="/tees/previous/all">Previous Tees</a></li>
                     <li><a href="/tees/free-tees">Win FREE TEES!</a></li>
                 </ol>
             </div>
@@ -331,7 +332,7 @@ Ireland<br>
             <div class="clear"></div>
             <hr>
             <div id="footer-copyright">
-                © Qwertee 2016. All designs copyright by owner. <a href="/privacy">Privacy Policy</a>. <a href="/terms">Terms of Use</a>. <a href="/cookies">Cookies Policy</a>. <a href="/comments">Comments Policy</a>. <a href="/copyright">Copyright Complaint</a>.
+                © Qwertee 2017. All designs copyright by owner. <a href="/privacy">Privacy Policy</a>. <a href="/terms">Terms of Use</a>. <a href="/cookies">Cookies Policy</a>. <a href="/comments">Comments Policy</a>. <a href="/copyright">Copyright Complaint</a>.
             </div>
         </div>
 
@@ -357,13 +358,14 @@ Ireland<br>
         </p>
     </div>
 </div>
-<input name="_csrf" value="DzfINDTw-UAZVFvsTtxzcmn-ZqNcOb23WpGQ" type="hidden">
+<input name="_csrf" value="4rV1mAvp--q2UaowUr84hQwL7gXI-VzkGARo" type="hidden">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js" integrity="sha256-rsPUGdUPBXgalvIj4YKJrrUlmLXbOb6Cp7cdxn1qeUc=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js" integrity="sha256-erF9fIMASEVmAWGdOmQi615Bmx0L/vWNixxTNDXS4FQ=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js" integrity="sha256-8gURHwCqNqUeazEqdOWKvII5TyB+SK9NWWaAsqASXCo=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.0/backbone-min.js" integrity="sha256-4ogNmzgpcngMvZn5hzxP3wZhizaoo2Zr252JWEWBb0A=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/hogan.js/3.0.2/hogan.min.js" integrity="sha256-jIAAmB65ff5CEFvV6DRfRWjHFwqq+AHeV4le8f8PYp4=" crossorigin="anonymous"></script>
-<script async="async" src="//cdn.qwertee.com/js/git-086b22f/main.js"></script>
+<script src="https://js.stripe.com/v3/"></script>
+<script async="async" src="//cdn.qwertee.com/js/git-976111b8/main.js"></script>
 
 
 </body></html>
